--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Fitness 531 App</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_settings_and_calculator">Settings And Calculator</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_calculator">1RM Calculator</string>
 </resources>
