Added Week Functionality
Week now affects the lifts.
Still not 100% accurate.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,10 @@
         <item>Squat</item>
         <item>Deadlift</item>
     </string-array>
+
+    <string-array name="weekArray">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
 </resources>
