Started work on the UI design
Fixed the colours, started the basic template

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Fitness 531 App</string>
+    <string name="app_name">5/3/1 Buddy</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_settings_and_calculator">Settings And Calculator</string>
     <string name="title_activity_settings">Settings</string>
